Update plugin Colorer from far2l

--- a/colorer/src/Colorer-library/src/CMakeLists.txt
+++ b/colorer/src/Colorer-library/src/CMakeLists.txt
@@ -203,7 +203,7 @@ elseif(CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
   # remove /W3 flag from CMAKE_CXX_FLAGS
   string(REGEX REPLACE "/W[3|4]" "" CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
 
-  set(FLAGS_CXX_DEFAULT)
+  set(FLAGS_CXX_DEFAULT /Zi)
   set(FLAGS_CXX_RELEASE /W3)
 
   if (COLORER_BUILD_HARD_WARNINGS)
