--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -59,5 +59,6 @@ add_custom_command(
 
 add_custom_command(
     TARGET python POST_BUILD
+    # DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/configs/plug/plugins
     COMMAND ${CMAKE_COMMAND} -E copy_directory "${CMAKE_CURRENT_SOURCE_DIR}/configs/plug/plugins" "${INSTALL_DIR}/Plugins/python/plug/plugins"
 )
