--- a/luafar/CMakeLists.txt
+++ b/luafar/CMakeLists.txt
@@ -45,19 +45,14 @@ if (NOT (${CMAKE_SYSTEM_NAME} MATCHES "DragonFly" OR
   set(SOURCES ${SOURCES} src/mytimer.c)
 endif()
 
-if (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
-  add_library (${PROJECT_NAME} SHARED ${SOURCES})
-else()
-  add_library (${PROJECT_NAME} SHARED ${SOURCES})
-endif()
-
+add_library (${PROJECT_NAME} SHARED ${SOURCES})
 set_property(TARGET ${PROJECT_NAME} PROPERTY C_STANDARD 11)
 target_include_directories(${PROJECT_NAME} PRIVATE ${LIBLUA_INCLUDE_DIRS})
 
 target_link_libraries(${PROJECT_NAME} utils)
 
 if (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
-  target_link_libraries(${PROJECT_NAME} far2m ${LIBLUA_LIBRARIES})
+  target_link_libraries(${PROJECT_NAME} far2m_interface ${LIBLUA_LIBRARIES})
 endif()
 
 if (LibUuid_FOUND)
