--- a/far/CMakeLists.txt
+++ b/far/CMakeLists.txt
@@ -245,6 +245,11 @@ if (${CMAKE_SYSTEM_NAME} MATCHES "FreeBSD")
     PRIVATE ${WINPORT}
     PRIVATE c
     PRIVATE ${UCHARDET_LIBRARIES})
+elseif (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
+    target_link_libraries(far2m
+    PUBLIC ${WINPORT}
+    PUBLIC dl
+    PUBLIC ${UCHARDET_LIBRARIES})
 else()
     target_link_libraries(far2m
     PRIVATE ${WINPORT}
