Enable test luamacro

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -77,10 +77,10 @@ jobs:
         run: |
           cmake --build _build --config $BUILD_TYPE
   
-      # - name: Test plugin luamacro
-      #   working-directory: ${{github.workspace}}/_build/install
-      #   shell: bash
-      #   run: FAR2M_STD=- ./far2m --tty lm:test
+      - name: Test plugin luamacro
+        working-directory: ${{github.workspace}}/_build/install
+        shell: bash
+        run: FAR2M_STD=- ./far2m -u ./profile --tty lm:test
   
   macos14-arm64-clang15:
     if: ${{ !(github.event_name == 'push' && github.ref == 'refs/heads/master' && github.repository != 'shmuz/far2m') }}
@@ -123,8 +123,8 @@ jobs:
           cmake --build _build --config $BUILD_TYPE
           # cmake --build _build --config $BUILD_TYPE -j$(sysctl -n hw.logicalcpu)
 
-      # - name: Test plugin luamacro
-      #   working-directory: ${{github.workspace}}/_build/install/far2m.app/Contents/MacOS
-      #   shell: bash
-      #   run: FAR2M_STD=- ./far2m --tty lm:test
+      - name: Test plugin luamacro
+        working-directory: ${{github.workspace}}/_build/install/far2m.app/Contents/MacOS
+        shell: bash
+        run: FAR2M_STD=- ./far2m -u ./profile --tty lm:test
 
