Add lf_ prefix to LuaFAR source files' names

--- a/luafar/CMakeLists.txt
+++ b/luafar/CMakeLists.txt
@@ -17,20 +17,20 @@ add_custom_command(
 
 set(SOURCES
   ${CMAKE_CURRENT_BINARY_DIR}/farflags.c
-  src/bit64.c
-  src/exported.c
-  src/lregex.c
-  src/luamacro.c
-  src/lusercontrol.c
-  src/lutf8lib.c
-  src/service.c
-  src/slnunico.c
-  src/sysutils.c
-  src/ustring.c
-  src/util.c
-  src/win.c
-  src/farhost.cpp
-  src/farlibs.cpp
+  src/lf_bit64.c
+  src/lf_exported.c
+  src/lf_regex.c
+  src/lf_luamacro.c
+  src/lf_usercontrol.c
+  src/lf_utf8lib.c
+  src/lf_service.c
+  src/lf_slnunico.c
+  src/lf_sysutils.c
+  src/lf_string.c
+  src/lf_util.c
+  src/lf_win.c
+  src/lf_farhost.cpp
+  src/lf_farlibs.cpp
   src/LPeg/lpcap.c
   src/LPeg/lpcode.c
   src/LPeg/lpcset.c
@@ -42,7 +42,7 @@ set(SOURCES
 if (NOT (${CMAKE_SYSTEM_NAME} MATCHES "DragonFly" OR
          ${CMAKE_SYSTEM_NAME} MATCHES "Android" OR
          ${CMAKE_SYSTEM_NAME} MATCHES "Darwin"))
-  set(SOURCES ${SOURCES} src/mytimer.c)
+  set(SOURCES ${SOURCES} src/lf_timer.c)
 endif()
 
 add_library (${PROJECT_NAME} SHARED ${SOURCES})
