Fix finding Lua library on Oracle Linux

--- a/lua/CMakeLists.txt
+++ b/lua/CMakeLists.txt
@@ -40,3 +40,8 @@ set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DLUA_USE_MKSTEMP") # suppress a warning
 add_executable (${PROJECT_NAME} ${SOURCES})
 
 target_link_libraries(${PROJECT_NAME} m)
+
+set_target_properties(${PROJECT_NAME}
+  PROPERTIES
+    RUNTIME_OUTPUT_DIRECTORY "${TOOLS_DIR}"
+)
