Revert 'CMake warnings' commits 51182411 and feb8268d

--- a/NetRocks/CMakeLists.txt
+++ b/NetRocks/CMakeLists.txt
@@ -104,7 +104,7 @@ set_target_properties(NetRocks-SHELL
 target_compile_options(NetRocks-SHELL PUBLIC -DNETROCKS_PROTOCOL)
 
 add_custom_command(TARGET NetRocks-SHELL POST_BUILD
-    # DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/src/Protocol/SHELL/Helpers
+    DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/src/Protocol/SHELL/Helpers
     COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_SOURCE_DIR}/src/Protocol/SHELL/Helpers "${INSTALL_DIR}/Plugins/NetRocks/plug/SHELL"
 )
 
@@ -240,6 +240,6 @@ set_target_properties(NetRocks
         SUFFIX ".far-plug-wide")
 
 add_custom_command(TARGET NetRocks POST_BUILD
-    # DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/configs
+    DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/configs
     COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_SOURCE_DIR}/configs "${INSTALL_DIR}/Plugins/NetRocks")
 
