--- a/far/bootstrap/CMakeLists.txt
+++ b/far/bootstrap/CMakeLists.txt
@@ -58,7 +58,7 @@ add_custom_command(TARGET bootstrap
    POST_BUILD
    COMMAND ${LUACMD} --mkhlf "${SCRIPTS}/FarEng.hlf.m4" > "${BOOTSTRAP}/FarEng.hlf"
    WORKING_DIRECTORY "${SCRIPTS}"
-   # DEPENDS "${SCRIPTS}/bootstrap.lua" "${SCRIPTS}/FarEng.hlf.m4"
+   DEPENDS "${SCRIPTS}/bootstrap.lua" "${SCRIPTS}/FarEng.hlf.m4"
    COMMENT "generating help eng"
 )
 
@@ -66,7 +66,7 @@ add_custom_command(TARGET bootstrap
     POST_BUILD
    COMMAND ${LUACMD} --mkhlf "${SCRIPTS}/FarRus.hlf.m4" > "${BOOTSTRAP}/FarRus.hlf"
    WORKING_DIRECTORY "${SCRIPTS}"
-   # DEPENDS "${SCRIPTS}/bootstrap.lua" "${SCRIPTS}/FarRus.hlf.m4"
+   DEPENDS "${SCRIPTS}/bootstrap.lua" "${SCRIPTS}/FarRus.hlf.m4"
    COMMENT "generating help rus"
 )
 
@@ -74,7 +74,7 @@ add_custom_command(TARGET bootstrap
    POST_BUILD
    COMMAND ${LUACMD} --mkhlf "${SCRIPTS}/FarHun.hlf.m4" > "${BOOTSTRAP}/FarHun.hlf"
    WORKING_DIRECTORY "${SCRIPTS}"
-   # DEPENDS "${SCRIPTS}/bootstrap.lua" "${SCRIPTS}/FarHun.hlf.m4"
+   DEPENDS "${SCRIPTS}/bootstrap.lua" "${SCRIPTS}/FarHun.hlf.m4"
    COMMENT "generating help hun"
 )
 
@@ -82,7 +82,7 @@ add_custom_command(TARGET bootstrap
    POST_BUILD
    COMMAND ${LUACMD} --mkhlf "${SCRIPTS}/FarUkr.hlf.m4" > "${BOOTSTRAP}/FarUkr.hlf"
    WORKING_DIRECTORY "${SCRIPTS}"
-   # DEPENDS "${SCRIPTS}/bootstrap.lua" "${BOOTSTRAP}/FarUkr.hlf"
+   DEPENDS "${SCRIPTS}/bootstrap.lua" "${BOOTSTRAP}/FarUkr.hlf"
    COMMENT "generating help ukr"
 )
 
@@ -105,13 +105,13 @@ add_custom_command(OUTPUT "${BOOTSTRAP}/lang.inc"
 
 add_custom_command(TARGET bootstrap
     POST_BUILD
-    # DEPENDS "${LNGFILES}"
+    DEPENDS "${LNGFILES}"
     COMMAND "cp" "${BOOTSTRAP}/*.lng" "${INSTALL_DIR}"
 )
 
 add_custom_command(TARGET bootstrap
     POST_BUILD
-    # DEPENDS "${HLFFILES}"
+    DEPENDS "${HLFFILES}"
     COMMAND "cp" "${BOOTSTRAP}/*.hlf" "${INSTALL_DIR}"
 )
 
