--- a/editorcomp/CMakeLists.txt
+++ b/editorcomp/CMakeLists.txt
@@ -26,6 +26,6 @@ set_target_properties(editorcomp
         SUFFIX ".far-plug-wide")
 
 add_custom_command(TARGET editorcomp POST_BUILD
-    # DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/configs
+    DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/configs
     COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_SOURCE_DIR}/configs "${INSTALL_DIR}/Plugins/editorcomp"
 )
