Misc updates from far2l

--- a/utils/CMakeLists.txt
+++ b/utils/CMakeLists.txt
@@ -76,6 +76,7 @@ set(SOURCES
     src/EnsureDir.cpp
     src/RandomString.cpp
     src/MakePTYAndFork.cpp
+    src/LookupDebugSymbol.cpp
     ${CHAR_CLASSES_CPP}
 )
 
