--- a/luamacro/CMakeLists.txt
+++ b/luamacro/CMakeLists.txt
@@ -14,7 +14,7 @@ add_library (${PROJECT_NAME} MODULE ${SOURCES})
 set_property(TARGET ${PROJECT_NAME} PROPERTY C_STANDARD 11)
 
 set(EXPNAMES
-  CLOSEPLUGIN COMPARE CONFIGURE DELETEFILES GETFILES GETFINDDATA GETLINKTARGET
+  ANALYSE CLOSEPLUGIN COMPARE CONFIGURE DELETEFILES GETFILES GETFINDDATA GETLINKTARGET
   MAYEXITFAR GETOPENPLUGININFO PROCESSHOSTFILE PROCESSEVENT PROCESSKEY PUTFILES
   SETDIRECTORY SETFINDLIST OPENPLUGIN OPENFILEPLUGIN PROCESSEDITOREVENT
   PROCESSEDITORINPUT PROCESSVIEWEREVENT PROCESSDIALOGEVENT PROCESSCONSOLEINPUT
