LuaFAR: OpenFilePluginW and export.OpenFilePlugin are removed
Use AnalyseW and OpenPluginW, like in FAR3.

--- a/luamacro/CMakeLists.txt
+++ b/luamacro/CMakeLists.txt
@@ -16,7 +16,7 @@ set_property(TARGET ${PROJECT_NAME} PROPERTY C_STANDARD 11)
 set(EXPNAMES
   ANALYSE CLOSEPLUGIN COMPARE CONFIGURE DELETEFILES GETFILES GETFINDDATA GETLINKTARGET
   MAYEXITFAR GETOPENPLUGININFO PROCESSHOSTFILE PROCESSEVENT PROCESSKEY PUTFILES
-  SETDIRECTORY SETFINDLIST OPENPLUGIN OPENFILEPLUGIN PROCESSEDITOREVENT
+  SETDIRECTORY SETFINDLIST OPENPLUGIN PROCESSEDITOREVENT
   PROCESSEDITORINPUT PROCESSVIEWEREVENT PROCESSDIALOGEVENT PROCESSCONSOLEINPUT
 )
 
