--- a/packaging/CMakeLists.txt
+++ b/packaging/CMakeLists.txt
@@ -23,7 +23,12 @@ SET(PACKAGE_DEPENDENCIES "${PACKAGE_DEPENDENCIES}, libgcc-s1 | libgcc | libgcc1"
 SET(PACKAGE_DEPENDENCIES "${PACKAGE_DEPENDENCIES}, libminizip1")
 # from main project
 IF (${USEWX})
-    SET(PACKAGE_DEPENDENCIES "${PACKAGE_DEPENDENCIES}, libwxgtk3.0-gtk3-0v5")
+    find_package(wxWidgets REQUIRED core base)
+    IF (${wxWidgets_VERSION_STRING} EQUAL "3.2.1")
+        SET(PACKAGE_DEPENDENCIES "${PACKAGE_DEPENDENCIES}, libwxgtk3.2-1, libwxbase3.2-1")
+    ELSE()
+        SET(PACKAGE_DEPENDENCIES "${PACKAGE_DEPENDENCIES}, libwxgtk3.0-gtk3-0v5")
+    ENDIF()
 ENDIF()
 if(OPENSSL_FOUND)
     SET(PACKAGE_DEPENDENCIES "${PACKAGE_DEPENDENCIES}, libssl1.1")
