Update OpenWith plugin from far2l

--- a/far/DE/far2m-tty.desktop
+++ b/far/DE/far2m-tty.desktop
@@ -3,9 +3,10 @@ Type=Application
 Name=far2m (Terminal)
 GenericName=far2m
 Comment=File and archive manager
-Exec=far2m --tty
 TryExec=far2m
+Exec=far2m --tty %F
 Terminal=true
 Categories=Utility;FileManager;System;FileTools;
+MimeType=inode/directory;
 Icon=far2m
 StartupNotify=true
