--- a/far/DE/far2m.desktop
+++ b/far/DE/far2m.desktop
@@ -3,9 +3,10 @@ Type=Application
 Name=far2m (WX GUI)
 GenericName=far2m
 Comment=File and archive manager
-Exec=far2m --notty
+Exec=far2m --notty %F
 TryExec=far2m
 Terminal=false
 Categories=Utility;FileManager;System;FileTools;
+MimeType=inode/directory;
 Icon=far2m
 StartupNotify=true
