--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,6 +7,7 @@ on:
   push:
     branches:
       - master
+      - test1
     paths-ignore:
       - '.gitignore'
       - 'Brewfile'
@@ -16,7 +17,8 @@ on:
   pull_request:
     branches:
       - master
-  
+      - test1
+
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
   BUILD_TYPE: Release
@@ -25,7 +27,7 @@ jobs:
   ubuntu-high-compiler:
     if: ${{ !(github.event_name == 'push' && github.ref == 'refs/heads/master' && github.repository != 'shmuz/far2m') }}
     runs-on: ubuntu-24.04
-  
+
     strategy:
       fail-fast: false
       matrix:
@@ -39,13 +41,13 @@ jobs:
             version: 18
             c: /usr/bin/clang-18
             cxx: /usr/bin/clang++-18
-  
+
     name: ubuntu-${{ matrix.compiler }}-${{ matrix.version }}
-  
+
     steps:
       - name: Checkout source
         uses: actions/checkout@v4
-  
+
       - name: Install far2m dependencies
         run: >
           sudo apt-get update;
@@ -57,31 +59,31 @@ jobs:
           python3-dev python3-cffi
           python3-markdown appstream
           libluajit-5.1-dev uuid-dev
-  
+
       - name: Create Build Environment
         # Create a separate build directory as working directory for all subsequent commands
         run: mkdir -p _build
-  
+
       - name: Configure CMake
         # Use a bash shell so we can use the same syntax for environment variable
         # access regardless of the host operating system
         shell: bash
         # -S and -B options specify source and build directories
-        run: > 
+        run: >
           cmake -S . -B _build -Wno-dev -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DPYTHON=yes
           -DCMAKE_C_COMPILER=${{ matrix.c }} -DCMAKE_CXX_COMPILER=${{ matrix.cxx }}
-  
+
       - name: Build
         shell: bash
         # Execute the build.  You can specify a specific target with "--target <NAME>"
         run: |
           cmake --build _build --config $BUILD_TYPE
-  
+
       - name: Test plugin luamacro
         working-directory: ${{github.workspace}}/_build/install
         shell: bash
         run: FAR2M_STD=- ./far2m -u ./profile --tty lm:test -set:Panel.Highlight=false
-  
+
   macos14-arm64-clang15:
     if: ${{ !(github.event_name == 'push' && github.ref == 'refs/heads/master' && github.repository != 'shmuz/far2m') }}
     runs-on: macos-14
@@ -90,7 +92,7 @@ jobs:
 
       - name: Checkout source
         uses: actions/checkout@v4
-  
+
       - name: Install far2m dependencies
         # libx11, openssl is already installed
         run: >
@@ -104,18 +106,18 @@ jobs:
 
       - name: Relink 'keg-only' packages
         run: brew link libarchive --force
-  
+
       - name: Create Build Environment
         # Create a separate build directory as working directory for all subsequent commands
         run: mkdir -p _build
-  
+
       - name: Configure CMake
         # Use a bash shell so we can use the same syntax for environment variable
         # access regardless of the host operating system
         shell: bash
         # -S and -B options specify source and build directories
         run: cmake -S . -B _build -Wno-dev -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DPYTHON=yes
-  
+
       - name: Build
         shell: bash
         # Execute the build.  You can specify a specific target with "--target <NAME>"
